force-app/main/default/objects/Release__c/Release__c.object-meta.xml
<CustomObject>
    <label>Release</label>
    <nameField>
        <displayFormat>OBJ-{0000}</displayFormat>
        <label>Release Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>