force-app/main/default/objects/Release__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Release_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>