force-app/main/default/objects/Release__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>