force-app/main/default/objects/Release__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>Promotion</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Release_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>