force-app/main/default/objects/Release__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <label>Release_Date</label>
    <type>Date</type>
</CustomField>