force-app/main/default/objects/Release__c/fields/Release_Date_Copy__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_Copy__c</fullName>
    <label>Release_Date Copy</label>
    <type>Date</type>
</CustomField>