force-app/main/default/objects/Release__c/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <label>Release_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>