force-app/main/default/objects/Release__c/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <label>Release_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>Hotfix</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>