force-app/main/default/objects/Release__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>