force-app/main/default/objects/Release__c/listViews/All_Releases.listView-meta.xml
<ListView>
    <fullName>All_Releases</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Releases</label>
</ListView>